# learn-haskell

.stack-work/: stack.sqlite3
.stack-work/ghci/134fdf51/: cabal_macros.h
exemplo-simples/: README.md  aula-haskell.cabal
exemplo-simples/src/: Main.hs
quickcheck/: quickcheck.cabal
quickcheck/.stack-work/: stack.sqlite3
quickcheck/.stack-work/ghci/28535b26/: cabal_macros.h
quickcheck/.stack-work/ghci/dc470367/: cabal_macros.h
quickcheck/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
quickcheck/src/: Main.hs
safenum/: README.md  safenum.cabal
safenum/src/: Main.hs
types/: types.cabal
types/.stack-work/: stack.sqlite3
types/.stack-work/ghci/8de6597d/: cabal_macros.h
types/src/: Main.hs
